--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -49,17 +49,27 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Install Miniconda
+        run: |
+          wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
+          bash miniconda.sh -b -p $HOME/miniconda
+          export PATH="$HOME/miniconda/bin:$PATH"
+          conda init bash
+          source ~/.bashrc
+          conda create -n myenv python=3.x  # Create a Conda environment with your desired Python version
+          conda activate myenv
+        shell: bash
+
+      - name: Install Python Dependencies
+        run: |
+          pip install -r requirements.txt
+        working-directory: /path/to/your/project  # Replace with the path to your project folder
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
       - name: Login to Docker Hub
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-
-      - name: Install Python and Dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install python3 python3-pip
-          pip3 install Flask numpy conda matplotlib pandas scikit-learn gunicorn
 
       - name: Build and push Docker image
         run: |
@@ -71,5 +81,5 @@ jobs:
         run: |
           curl -X POST "https://api.render.com/v1/deploys" -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" -d "{
             \"branch\": \"main\",
-            \"serviceId\": \"${{ secrets.SERVICE_ID }}\"
+            \"serviceId\": \"${{ secrets.YOUR_RENDER_SERVICE_ID_SECRET }}\"
           }"
