--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -64,8 +64,8 @@ jobs:
       - name: Build and push Docker image
         run: |
           docker buildx create --use
-          docker buildx build --file Dockerfile --tag lobnasellami/price_pred_i:latest --push .
-          docker push lobnasellami/price_pred_i:latest
+          docker buildx build --file Dockerfile --tag lobnasellami/price_pred_i:v1 --push .
+          docker push lobnasellami/price_pred_i:v1
 
       - name: Deploy to Render.com
         run: |
